--- a/FoodApp/Views/Shared/_Layout1.cshtml
+++ b/FoodApp/Views/Shared/_Layout1.cshtml
@@ -40,6 +40,11 @@
                     <ul class="navbar-nav text-light">
                         <partial name="_LoginPartial.cshtml"/>
                     </ul>
+                     <a class="navbar-brand" asp-controller="Movies" asp-action="Index">eTickets</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
  
                 </div>
             </div>
