login and registeration

--- a/FoodApp/Views/Shared/_Layout1.cshtml
+++ b/FoodApp/Views/Shared/_Layout1.cshtml
@@ -37,10 +37,19 @@
                      <ul class="navbar-nav">
                         @await Component.InvokeAsync("ShoppingCartSummary")
                     </ul>
-                    <ul class="navbar-nav text-light">
+
+                    <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Login">
+                        <i class="bi bi-box-arrow-in-right"></i>Log In
+                    </a>
+                        <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Register">
+                        <i class="bi bi-person-plus"></i>Register
+                    </a>
+                        <form id="logoutForm" class="form-inline"asp-area="" asp-controller="Account" asp-action="Logout">
+                        <button id="logout" type="submit" class="nav-link  btn btn-danger">Logout</button>
+                       </form>
+                 @*   <ul class="navbar-nav text-light">
                         <partial name="_LoginPartial.cshtml"/>
-                    </ul>
-                     <a class="navbar-brand" asp-controller="Movies" asp-action="Index">eTickets</a>
+                    </ul>*@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -57,5 +66,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+   
 </body>
 </html>
+  
