--- a/FoodApp/Views/Item/Details.cshtml
+++ b/FoodApp/Views/Item/Details.cshtml
@@ -52,7 +52,11 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> <span>|</span>
+    }
+    
     <a asp-action="Index">Back to List</a>
         <a class="btn btn-success text-white" 
                                    asp-controller="Orders" 
