--- a/FoodApp/Views/_ViewImports.cshtml
+++ b/FoodApp/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using FoodApp
 @using FoodApp.Models
 @using FoodApp.Data.ViewModel
+@using Microsoft.AspNetCore.Identity
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
