--- a/FoodApp/Views/Account/Login.cshtml
+++ b/FoodApp/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row">
-    <div class="col-md-6 offset-3">
+    <div class="col-md-7 ">
         <p>
             <h4>Log in to your account</h4>
         </p>
@@ -35,11 +35,53 @@
                     </div>
 
                     <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="RememberMe">
+                                <input asp-for="RememberMe" />
+                                @Html.DisplayNameFor(m => m.RememberMe)
+                            </label>
+                        </div>
+                    </div>
+                    <div>
+                        <a asp-action="ForgotPassword">Forgot Password?</a>
+                    </div>
+
+                    <div class="form-group">
+                           <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Register">
+                                        First time? Register!
+                            </a>
                         <input class="btn btn-outline-success float-right" type="submit" value="Log in" />
-                        <a class="btn btn-outline-secondary" asp-controller="Item" asp-action="Index">Cancel</a>
                     </div>
                 </form>
             </div>
         </div>
+    </div>
+
+    <div class="col-md-5 ">
+        <p>
+            <h4>External Login</h4>
+        </p>
+        <hr />
+        @if(Model.ExternalLogins.Count == 0)
+        {
+            <div class="col-md-12 alert alert-danger">
+                No external logins configured !
+            </div>
+        }
+        else
+        {
+            <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                <div class="form-group">
+                    @foreach(var provider in Model.ExternalLogins)
+                    {
+                        <button type="submit" class="btn btn-primary " 
+                                name="provider" value="@provider.Name" 
+                                title="Login using your @provider.DisplayName account">
+                            @provider.DisplayName
+                        </button>
+                    }
+                </div>
+            </form>
+        }
     </div>
 </div>
