--- a/FoodApp/Views/Account/Register.cshtml
+++ b/FoodApp/Views/Account/Register.cshtml
@@ -45,8 +45,11 @@
                     </div>
 
                     <div class="form-group">
+                        
+                                     <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Login">
+                                       Have an account? Login!
+                                      </a>
                         <input class="btn btn-outline-success float-right" type="submit" value="Sign up" />
-                        <a class="btn btn-outline-secondary" asp-controller="Item" asp-action="Index">Cancel</a>
                     </div>
                 </form>
             </div>
