--- a/FoodApp/Views/Restaurant/Details.cshtml
+++ b/FoodApp/Views/Restaurant/Details.cshtml
@@ -59,6 +59,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    {
+         <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> <span>|</span>
+    }
+   
     <a asp-action="Index">Back to List</a>
 </div>
