--- a/FoodApp/Views/Restaurant/Index.cshtml
+++ b/FoodApp/Views/Restaurant/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FoodApp.Models.Restaurant>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Restaurants";
 }
 @{
     Layout = "_Layout";
@@ -9,11 +9,15 @@
 }
 
 
-<h1>Index</h1>
+<h1 style="text-align:center" class="m-5">Restaurants</h1>
 
+ @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+{
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -69,12 +73,22 @@
             <td>
                 @Html.DisplayFor(modelItem => item.phoneNum)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+            @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                }
+             else
+                {
+                        <td>
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
+                     
+                    </td>
+                }
+            </tr>
 }
     </tbody>
 </table>
