--- a/FoodApp/Views/Shared/_Layout1.cshtml
+++ b/FoodApp/Views/Shared/_Layout1.cshtml
@@ -4,17 +4,49 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FoodApp</title>
+@*    <title>@ViewData["Title"] - FoodApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+  <link rel="shortcut icon" href="images/favicon.png" >
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <title>@ViewBag.Title</title>
+    <title>@ViewBag.Title</title>*@
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <link rel="shortcut icon" href="~/favicon.ico" >
+
+  <title> Yummy </title>
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+  <!--owl slider stylesheet -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <!-- nice select  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
+  <!-- font awesome style -->
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
+
+     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light text-light bg-dark border-bottom box-shadow mb-3">
             <div class="container m-4">
-                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">FoodApp</a>
+                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Yummy</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,7 +54,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav mx-auto @*flex-grow-1*@ ">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Item" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -38,23 +70,11 @@
                         @await Component.InvokeAsync("ShoppingCartSummary")
                     </ul>
 
-                    <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Login">
-                        <i class="bi bi-box-arrow-in-right"></i>Log In
-                    </a>
-                        <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Register">
-                        <i class="bi bi-person-plus"></i>Register
-                    </a>
-                        <form id="logoutForm" class="form-inline"asp-area="" asp-controller="Account" asp-action="Logout">
-                        <button id="logout" type="submit" class="nav-link  btn btn-danger">Logout</button>
-                       </form>
-                 @*   <ul class="navbar-nav text-light">
-                        <partial name="_LoginPartial.cshtml"/>
-                    </ul>*@
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
- 
+                    @*render Identity partial*@
+                    @*<partial name="_LoginPartial.cshtml"/>*@
+                    <ul class="navbar-nav ">
+                        <partial name="_Identity.cshtml"/>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -65,7 +85,11 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+ @*   @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")*@
+    @await RenderSectionAsync("scripts", required: false)
+
+
    
 </body>
 </html>
