--- a/FoodApp/Views/Shared/_LoginPartial.cshtml
+++ b/FoodApp/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,25 @@
-﻿@using Microsoft.AspNetCore.Identity
-@*
+﻿@*
     @using FoodApp.Areas.Identity.Data
 
 *@
 
 
-@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
  
  
 @*<ul class="navbar-nav ">*@
-@if (SignInManager.IsSignedIn(User))
+@if (!User.Identity.IsAuthenticated)
+{
+     <li class="nav-item">
+        <a id="manage" class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+    </li>
+
+        <li class="nav-item">
+        <a id="manage" class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+    </li>
+}
+else
 {
     <li class="nav-item">
         <a id="manage" class="nav-link text-light" asp-area="" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
@@ -22,15 +30,5 @@
         </form>
     </li>
 }
-else
-{
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-    </li>
 
-        <li class="nav-item">
-        <a id="manage" class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-    </li>
-
-}
 @*</ul>*@
