--- a/FoodApp/Views/Account/RegisterCompleted.cshtml
+++ b/FoodApp/Views/Account/RegisterCompleted.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="row">
-    <div class="col-md-6 offset-3 alert alert-success text-center">
-        <h2>Your account was created successfully</h2>
-        <p>You can now log in to your account using your credentials.</p>
+    <div class="col-md-6 offset-3 alert alert-dismissible text-center">
+        <h2>Be Sure of Your Entered Data.</h2>
+        <p>Your data may be not accepted for several reasons .</p>
         <hr />
         <p>Thank you!</p>
     </div>
