--- a/FoodApp/Views/Restaurant/Index.cshtml
+++ b/FoodApp/Views/Restaurant/Index.cshtml
@@ -1,15 +1,69 @@
-﻿@model IEnumerable<FoodApp.Models.Restaurant>
+﻿@model RegisterVM;
 
 @{
     ViewData["Title"] = "Restaurants";
+   
+
+   IEnumerable<Restaurant> rests = ViewData["rest"] as IEnumerable<Restaurant>;
 }
 @{
     Layout = "_Layout";
-   //  Layout = "_MasterLayout";
 }
 
 
 <h1 style="text-align:center" class="m-5">Restaurants</h1>
+
+    <div class="container">
+     <div class="row">
+    <div class="modal" tabindex="-1" role="dialog" id="reg">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Sign UP</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+       <div class="modal-body">
+         <form asp-controller="Account" asp-action="Register">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                    <div class="form-group">
+                        <label asp-for="FullName" class="control-label"></label>
+                        <input asp-for="FullName" class="form-control" />
+                        <span asp-validation-for="FullName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">EmailAddress</label>
+                        <input asp-for="EmailAddress" class="form-control" />
+                        <span asp-validation-for="EmailAddress" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label  class="control-label">Password</label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label  class="control-label">ConfirmPassword</label>
+                        <input asp-for="ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                           <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Login">
+                                 Have an account? Login!
+                           </a>
+                        <input class="btn btn-outline-success float-right" type="submit" value="Sign up" />
+                    </div>
+                </form>    
+                </div>
+   
+    </div>
+  </div>
+</div>
+     </div>
+    </div>
+
 
  @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
 {
@@ -17,37 +71,56 @@
     <a asp-action="Create">Create New</a>
 </p>
 }
+<div class="container">
+    <div class="row">
+
+    <div id="filter" class="col-lg-2">
+        <h3>Category</h3>
+
+      <input type="checkbox" value="Pizza"><label class="lbl">Pizza</label><br>
+
+      <input type="checkbox" value="Fried Chicken"><label class="lbl">Fried Chicken</label><br>
+
+      <input type="checkbox" value="Pasta"><label class="lbl">Pasta</label><br>
+
+      <input type="checkbox" value="Dessert"><label class="lbl"> Dessert</label><br>
+      <hr>
+
+      <h3>Place</h3>
+      <input type="checkbox" value="Pizza"><label class="lbl">Giza</label><br>
+
+      <input type="checkbox" value="Fried Chicken"><label class="lbl">Cairo</label><br>
+
+      <input type="checkbox" value="Pasta"><label class="lbl">Minofia</label><br>
+
+
+</div>
+    <div  class="col-lg-10">
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Logo)
+                
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                  Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                  Description
             </th>
-            
+        
             <th>
-                @Html.DisplayNameFor(model => model.street)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.government)
+                City
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.city)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.phoneNum)
+               HotLine
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in rests) {
         <tr>
               <td>
                 @*@Html.DisplayFor(modelItem => item.Logo)*@
@@ -60,13 +133,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
-          
-            <td>
-                @Html.DisplayFor(modelItem => item.street)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.government)
-            </td>
+     
             <td>
                 @Html.DisplayFor(modelItem => item.city)
             </td>
@@ -81,14 +148,27 @@
                         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     </td>
                 }
-             else
+             else if(!User.Identity.IsAuthenticated)
                 {
                         <td>
-                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
-                     
-                    </td>
-                }
+                            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#reg">
+                                Order NOW!
+                            </button>
+                        </td>
+
+                         
+                    }
+                    else
+                    {
+                        <td>
+                           <a class="btn btn-warning" asp-action="Details" asp-route-id="@item.Id">Order NOW!</a> 
+                        </td>
+                        
+                    }
             </tr>
 }
     </tbody>
 </table>
+</div>
+</div>
+</div>
