--- a/FoodApp/Views/Item/Details.cshtml
+++ b/FoodApp/Views/Item/Details.cshtml
@@ -58,10 +58,12 @@
     }
     
     <a asp-action="Index">Back to List</a>
-        <a class="btn btn-success text-white" 
+        
+     @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+    {<a class="btn btn-success text-white" 
                                    asp-controller="Orders" 
                                    asp-action="AddToShoppingCart" 
                                    asp-route-id="@Model.Id">
-                                <i class="bi bi-cart-plus"></i> Add to Cart (Price @Model.Price.ToString("c"))</a>
-                           
+       <i class="bi bi-cart-plus"></i> Add to Cart (Price @Model.Price.ToString("c"))</a>
+    }                       
 </div>
