--- a/FoodApp/Views/Shared/_Layout.cshtml
+++ b/FoodApp/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav  mx-auto ">
                       <li class="nav-item active">
-                        <a class="nav-link" asp-area="" asp-controller="Item" asp-action="Index"> Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" asp-area="" asp-controller="Restaurant" asp-action="Index"> Home <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#container">Menu</a>
@@ -85,7 +85,6 @@
                           </li>
                       }
                   
-                   
                   </ul>
 
                   <div class="user_option">
@@ -198,11 +197,7 @@
         </main>
     </div>
 
-    @*<footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - FoodApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>*@
+
 
     <!-- footer section -->
   <footer class="footer_section" id="footer">
@@ -307,11 +302,6 @@
   </script>
   <!-- End Google Map -->
 
-
-@*
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>*@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
