--- a/FoodApp/Views/Shared/_Layout1.cshtml
+++ b/FoodApp/Views/Shared/_Layout1.cshtml
@@ -4,13 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-@*    <title>@ViewData["Title"] - FoodApp</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-  <link rel="shortcut icon" href="images/favicon.png" >
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <title>@ViewBag.Title</title>*@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
@@ -54,7 +48,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav mx-auto @*flex-grow-1*@ ">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Item" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Restaurant" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -69,9 +63,7 @@
                      <ul class="navbar-nav">
                         @await Component.InvokeAsync("ShoppingCartSummary")
                     </ul>
-
-                    @*render Identity partial*@
-                    @*<partial name="_LoginPartial.cshtml"/>*@
+\
                     <ul class="navbar-nav ">
                         <partial name="_Identity.cshtml"/>
                     </ul>
@@ -85,8 +77,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
- @*   @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")*@
+ 
     @await RenderSectionAsync("scripts", required: false)
 
 
