Contact us layout

--- a/FoodApp/Views/Shared/_Layout.cshtml
+++ b/FoodApp/Views/Shared/_Layout.cshtml
@@ -106,6 +106,11 @@
                         <partial name="_Identity.cshtml"/>
                       </li>
                   </ul>
+                   <ul class="navbar-nav px-2">
+                      <li class="nav-item ">
+                       <partial name="_ContactusPartial.cshtml"/>
+                     </li>
+                  </ul>
               </div>
             </nav>
           </div>
@@ -267,8 +272,10 @@
           <p>
             10.00 Am -10.00 Pm
           </p>
+
         </div>
       </div>
+
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
@@ -278,7 +285,9 @@
         </p>
       </div>
     </div>
+
   </footer>
+
   <!-- footer section -->
 
   <!-- jQery -->
