--- a/FoodApp/Views/Shared/_ContactusPartial.cshtml
+++ b/FoodApp/Views/Shared/_ContactusPartial.cshtml
@@ -2,7 +2,7 @@
 
 
    <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#Con">
-                                Contact Us - Moveme!
+                                Contact Us
     </button>
     <div class="container">
      <div class="row">
